objects/QuoteRequest_Product_Event__e/QuoteRequest_Product_Event__e.object-meta.xml
<CustomObject>
    <description>QuoteRequest Product Event</description>
    <label>QuoteRequest Product Event</label>
    <pluralLabel>QuoteRequest Product Events</pluralLabel>
</CustomObject>