objects/QuoteRequest_Product_Event__e/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>ProductId</description>
    <label>ProductId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>