objects/QuoteRequest_Product_Event__e/fields/QuoteRequestId__c.field-meta.xml
<CustomField>
    <fullName>QuoteRequestId__c</fullName>
    <description>QuoteRequestId</description>
    <label>QuoteRequestId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>