objects/QuoteRequest_Product_Event__e/fields/SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionTerm__c</fullName>
    <description>Subscription Term</description>
    <label>Subscription Term</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>